wk_taa_taaqa/src/objects/AMS_Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AMS Inventory</relationshipLabel>
        <relationshipName>AMS_Inventory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Adjusted_Full_Year_Cycle__c</fullName>
        <label>Full Year Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Detail_Type__c</fullName>
        <label>Contract Detail Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <label>Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTN__c</fullName>
        <label>DTN</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IC_Y_N__c</fullName>
        <label>IC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN__c</fullName>
        <label>LAN</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MYA_End_Date__c</fullName>
        <label>MYA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Material_ID__c</fullName>
        <label>Material ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newport_Rollup__c</fullName>
        <label>Newport Rollup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newport__c</fullName>
        <label>Newport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QP__c</fullName>
        <label>QP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Program__c</fullName>
        <label>Renewal Program</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standing_Order__c</fullName>
        <label>Standing Order</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Date__c</fullName>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WK_Inventory_ID__c</fullName>
        <externalId>true</externalId>
        <label>WK Inventory ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AMS Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AMS-{00000}</displayFormat>
        <label>AMS Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AMS Inventory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>